--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,17 +1,16 @@
 #spring.datasource.url= jdbc:mysql://localhost:3306/heroescompany?serverTimezone=UTC
-#
+
 #spring.datasource.username=root
 #spring.datasource.password=admin
-server.port=8080
-spring.datasource.url= jdbc:mysql://heroescompany.cw6dxqzssasy.eu-west-1.rds.amazonaws.com:3306/heroescompany
-heroescompany.cw6dxqzssasy.eu-west-1.rds.amazonaws.com
+server.port=8080	
+spring.datasource.url= jdbc:mysql://heroes-company.cw6dxqzssasy.eu-west-1.rds.amazonaws.com:3306/heroes-company
 spring.datasource.username=admin
 spring.datasource.password=45414541
 
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #	jpa & Hibernate
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 		
 
 spring.jpa.show-sql=true
@@ -19,4 +18,4 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
 # App Properties
 mpHeroesCompany.app.jwtSecret= mpHeroesCompanySecretKey
-mpHeroesCompany.app.jwtExpirationMs= 86400000
+mpHeroesCompany.app.jwtExpirationMs= 86400000ny.app.jwtExpirationMs= 86400000
